# housing-portal

./: .env.example  .gitignore  README.md  USER-GUIDE.md  docker-compose.dev.yml  docker-compose.yml  pom.xml
apps/api-fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/api-fastapi/app/: main.py
apps/api-fastapi/app/api/v1/: dependencies.py  router.py
apps/api-fastapi/app/api/v1/endpoints/: health.py  model_info.py  predict.py
apps/api-fastapi/app/core/: config.py  exceptions.py  logging.py
apps/api-fastapi/app/models/: __init__.py  housing_model.py
apps/api-fastapi/app/schemas/: __init__.py  health.py  model_info.py  prediction.py
apps/api-fastapi/app/services/: model_service.py
apps/api-fastapi/app/utils/: exception_handlers.py  middleware.py
apps/api-fastapi/scripts/: train_model.py
apps/api-fastapi/tests/: conftest.py
apps/api-fastapi/tests/integration/: test_health.py  test_model_info.py  test_predict.py
apps/api-fastapi/tests/unit/: test_model.py  test_schemas.py
apps/api-java/: Dockerfile  pom.xml  structure.txt
apps/web/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  structure.txt  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/estimator/: layout.tsx  page.tsx
apps/web/hooks/: useApi.ts  useBatchPrediction.ts  useHistory.ts  useMarketStats.tsx  usePrediction.ts  useWhatIf.tsx
apps/web/types/: fastapi.types.ts  java-api.types.ts
src/main/: application-docker.yml  application.yml
(+55 files in other folders)
